--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -21,40 +21,40 @@ dependencies:
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
-  flutter_markdown: ^0.6.18
+  flutter_markdown: ^0.7.7+1
   
   # Networking
   http: ^1.2.0
   
   # Navigation
-  go_router: ^13.0.0
+  go_router: ^17.0.1
   
   # Forms & Validation
-  flutter_form_builder: ^9.2.1
-  form_builder_validators: ^9.1.0
+  flutter_form_builder: ^10.2.0
+  form_builder_validators: ^11.2.0
   
   # Media
   video_player: ^2.8.2
-  audioplayers: ^5.2.1
+  audioplayers: ^6.5.1
   image_picker: ^1.0.7
-  file_picker: ^6.1.1
+  file_picker: ^10.3.8
   
   # Storage
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   
   # Utilities
-  intl: ^0.18.1
+  intl: ^0.20.2
   url_launcher: ^6.2.4
-  share_plus: ^7.2.1
+  share_plus: ^12.0.1
   
   # Payments
-  flutter_stripe: ^10.1.1
+  flutter_stripe: ^12.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
