--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   share_plus: ^12.0.1
   
   # Payments
-  flutter_stripe: ^12.2.0
 
 dev_dependencies:
   flutter_test:
@@ -64,13 +63,13 @@ flutter:
     - assets/images/
     - assets/icons/
   
-  fonts:
-    - family: Inter
-      fonts:
-        - asset: assets/fonts/Inter-Regular.ttf
-        - asset: assets/fonts/Inter-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Inter-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Inter-Bold.ttf
-          weight: 700
+  # fonts:
+  #   - family: Inter
+  #     fonts:
+  #       - asset: assets/fonts/Inter-Regular.ttf
+  #       - asset: assets/fonts/Inter-Medium.ttf
+  #         weight: 500
+  #       - asset: assets/fonts/Inter-SemiBold.ttf
+  #         weight: 600
+  #       - asset: assets/fonts/Inter-Bold.ttf
+  #         weight: 700
