--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   # UI Components
   cupertino_icons: ^1.0.6
+  phosphor_flutter: ^2.1.0
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.2
