--- a/flutter_app/android/app/build.gradle
+++ b/flutter_app/android/app/build.gradle
@@ -47,6 +47,11 @@ android {
         jvmTarget = '1.8'
     }
 
+    lint {
+        disable "NullSafeMutableLiveData"
+        checkReleaseBuilds false
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
