--- a/flutter_app/android/build.gradle
+++ b/flutter_app/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.8.0'
+        classpath 'com.android.tools.build:gradle:8.7.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.4.0'
     }
@@ -18,7 +18,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
-    // Force AndroidX versions compatible with AGP 8.8.0 (avoids AAR metadata requiring 8.9.1+)
+    // Force AndroidX versions compatible with AGP 8.7.x (avoids AAR metadata requiring 8.9.1+)
     configurations.all {
         resolutionStrategy {
             force 'androidx.core:core:1.15.0'
@@ -26,6 +26,7 @@ allprojects {
             force 'androidx.activity:activity:1.9.0'
             force 'androidx.activity:activity-ktx:1.9.0'
             force 'androidx.browser:browser:1.8.0'
+            force 'androidx.exifinterface:exifinterface:1.3.7'
         }
     }
 }
@@ -36,6 +37,16 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+    afterEvaluate {
+        if (project.hasProperty('android')) {
+            project.android {
+                lint {
+                    disable "NullSafeMutableLiveData"
+                    checkReleaseBuilds false
+                }
+            }
+        }
+    }
 }
 
 tasks.register("clean", Delete) {
