--- a/flutter_app/android/app/build.gradle
+++ b/flutter_app/android/app/build.gradle
@@ -92,4 +92,6 @@ flutter {
 
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    // Explicit billing 7.1.1 so Google Play sees the correct version
+    implementation 'com.android.billingclient:billing:7.1.1'
 }
