--- a/flutter_app/android/build.gradle
+++ b/flutter_app/android/build.gradle
@@ -27,6 +27,9 @@ allprojects {
             force 'androidx.activity:activity-ktx:1.9.0'
             force 'androidx.browser:browser:1.8.0'
             force 'androidx.exifinterface:exifinterface:1.3.7'
+            // Force Billing Library 7+ for Google Play compliance
+            force 'com.android.billingclient:billing:7.1.1'
+            force 'com.android.billingclient:billing-ktx:7.1.1'
         }
     }
 }
